# ai-reo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: chat.md  code_auditor.md  crypto_analyst.md  debugger.md  deobfuscator.md  documentation.md  dynamic_analyst.md  exploit_developer.md  firmware_analyst.md  mobile_analyst.md  network_analyst.md  orchestrator.md  static_analyst.md
docker/: Dockerfile.angr  Dockerfile.capa  Dockerfile.objdump  Dockerfile.upx  Dockerfile.yara
docker/angr/: Dockerfile
docker/apkid/: Dockerfile
docker/apktool/: Dockerfile
docker/binwalk/: Dockerfile
docker/capa/: Dockerfile
docker/cape/: docker-compose.yml
docker/checksec/: Dockerfile
docker/die/: Dockerfile
docker/floss/: Dockerfile
docker/frida/: Dockerfile
docker/hollows_hunter/: Dockerfile
docker/jadx/: Dockerfile
docker/lief/: Dockerfile  lief_parse.py
docker/objdump/: Dockerfile
docker/pe_sieve/: Dockerfile
docker/qiling/: Dockerfile
docker/unipacker/: Dockerfile
docker/unlicense/: Dockerfile
docker/upx/: Dockerfile
docker/volatility3/: Dockerfile
docker/yara/: Dockerfile
docs/: agents.md  skills.md  tools.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
skills/android-apk-analysis/: SKILL.md
skills/anti-analysis-bypass/: SKILL.md
skills/control-flow-recovery/: SKILL.md
skills/crypto-identification/: SKILL.md
skills/firmware-analysis/: SKILL.md
skills/firmware-extraction/: SKILL.md
skills/heap-exploitation/: SKILL.md
(+65 files in other folders)
